<resources>
    <string name="service_app_name">Сервисмен</string>
    <string name="activity_add_alarm">Добавить проблему</string>
    <string name="activity_alarms">Аварии и проблемы</string>
    <string name="activity_map">Карта объектов</string>
    <string name="activity_references">Справочники</string>
    <string name="onboarding_next_button_description">Дальше</string>
    <string name="onboarding_finish_button_description">Закончить</string>
    <string name="onboarding_pre_button_description">Назад</string>
    <string name="onboarding_section_1">Войдите в приложение</string>
    <string name="onboarding_intro_1">Выберите свой профиль в списке пользователей и введите Ваш пин-код, или отсканируйте персональную карточку </string>
    <string name="onboarding_section_2">Синхронизируйте данные</string>
    <string name="onboarding_intro_2">Проверьте, что приложение загрузило все справочники и данные</string>
    <string name="onboarding_section_3">Отслеживайте активные задачи</string>
    <string name="onboarding_intro_3">Выполняйте задачи, снимайте показания, последовательно делайте фото объектов и оборудования,
        которые будут являться отметками вашего присутствия</string>
    <string name="onboarding_section_4">Фиксируйте аварии и неисправности</string>
    <string name="onboarding_intro_4">Вводите в систему все, что обнаружили</string>
    <string name="onboarding_section_5">Заносите в систему показания приборов</string>
    <string name="onboarding_intro_5">После выбора в списке измерительного оборудования - вводите данные</string>
    <string name="onboarding_section_6">Выполняйте задачи по обслуживанию</string>
    <string name="onboarding_intro_6">Отмечайте все операции в чек-листе</string>
    <string name="onboarding_finish_button_description_wait">Пожалуйста подождите…</string>
    <string name="message_no_write_permission">Нет разрешений на запись</string>
    <string name="message_no_gps_permission">Нет разрешения на определение местоположения</string>
    <string name="user_select">Оператор</string>
    <string name="user_login">Войти</string>
    <string name="user_pin">Пин-код</string>
    <string name="user_pin_default">****</string>
    <string name="login_error">Не верная RFID метка или пин-код!</string>
    <string name="no_last_time">Нет обслуживания</string>
    <string name="add_message_title">Сообщение</string>
    <string name="enter_something">Введите сообщение</string>
    <string name="error_message_title">Длина сообщения меньше мимнумума</string>
    <string name="flat_abonent">Абонент</string>
    <string name="flat_tasks">Задачи</string>
    <string name="flat_task_completed">Выполненные: [%1s]</string>
    <string name="flat_task_uncompleted">Не выполненные: [%1s]</string>
    <string name="equipment_serial">Серийный номер:</string>
    <string name="equipment_date">Дата поверки:</string>
    <string name="enter_measure">Введите показания</string>
    <string name="equipment_status">Статус</string>
    <string name="activity_add_equipment">Добавить оборудование</string>
    <string name="equipment_test_date">Дата поверки</string>
    <string name="equipment_task_date">Дата проверки</string>
    <string name="equipment_unknown">Неизвестный тип</string>
    <string name="task_archive">Выполненные задачи</string>
    <string name="task">Задачи</string>
    <string name="operation_title">%1s [%2s]</string>
    <string name="action_add_image">Добавить изображение</string>
    <string name="action_set_status">Установить статус</string>
    <string name="action_add_comment">Добавить комментарий</string>
    <string name="action_add_attribute">Добавить атрибут</string>
    <string name="action_change_status">Сменить статус</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_master">Мастер</string>
    <string name="user_user">Пользователь</string>
    <string name="task_date">Назначена:</string>
    <string name="task_deadline">Срок:</string>
    <string name="task_author">Автор:</string>
    <string name="task_end">Выполнена:</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_users">Абоненты</string>
    <string name="nav_map">Карта</string>
    <string name="nav_checkin">Работа</string>
    <string name="nav_alarms">Аварии</string>
    <string name="nav_switch_theme">Режим день/ночь</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_about">О сервисе</string>
    <string name="nav_objects">Объекты</string>
    <string name="nav_tasks">Задачи</string>
    <string name="nav_messages">Сообщения</string>
    <string name="nav_exit">Выход</string>
    <string name="profile_submit_button">Добавить</string>
    <string name="all">All</string>
    <string name="on_the_way">On the way</string>
    <string name="delivered">Delivered</string>
    <string name="action_search">Search</string>
    <string name="mark_all_read">Mark all read</string>
    <string name="share">Share</string>
    <string name="delete">Удалить</string>
    <string name="copy_code">Copy code</string>
    <string name="set_unread">Set unread</string>
    <string name="set_read">Set read</string>
    <string name="remove">Ответить</string>
    <string name="get_answers_error">Unable to get the latest answer.</string>
    <string name="network_error">Network error, try again later.</string>
    <string name="package_number_copied">Package number has been copied successfully.</string>
    <string name="package_removed_msg">has been removed.</string>
    <string name="undo">UNDO</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="latest_status">Latest status:&#160;</string>
    <string-array name="question_status">
        <item>Открыт</item>
        <item>Закрыт</item>
    </string-array>
    <string name="to_add_trick">Нажмите кнопку, чтобы добавить рецепт</string>
    <string name="user_name">Автор</string>
    <string name="question_title">Вопрос</string>
    <string name="delete_question_message">Вы уверены, что хотите удалить свой вопрос?</string>
    <string name="delete_trick_message">Вы уверены, что хотите удалить свой совет?</string>
    <string name="edit_name">Редактирование вопроса</string>
    <string name="input_empty">Вопрос не может быть пустым</string>
    <string name="delete_trick">Удалить совет</string>
    <string name="default_rate_plus">0</string>
    <string name="default_rate_minus">0</string>
    <string name="tint_question_text">Описание</string>
    <string name="wrong_title">Серийный номер не указан</string>
    <string name="require_permission">Нет разрешений на запись фотографий</string>
    <string name="question">Вопрос</string>
    <string name="question_exist">Вопрос с таким названием уже есть</string>
    <string name="error">Ошибка</string>
    <string name="something_wrong">Что-то пошло не так</string>
    <string name="unable_to_open_camera">Не можем запустить камеру</string>
    <string name="add_question">Добавить вопрос</string>
    <string name="tint_answer_title">Ответ</string>
    <string name="tint_trick_title">Совет</string>
    <string name="tint_answer_text">Ваш ответ</string>
    <string name="profile_name">Ваше имя или никнейм</string>
    <string name="profile_city">Город или локация</string>
    <string name="phone_number">Номер телефона</string>
    <string name="official_website">Страница в соцсети</string>
    <string name="notifications">Оповещения</string>
    <string name="gps">Не собирать данные GPS</string>
    <string name="gps_desc">Необходимость сбора данных координат</string>
    <string name="gps_center">Фокус карты</string>
    <string name="gps_center_desc">Центровать карту по координатам</string>
    <string name="load_test_data">Загрузить тестовые данные</string>
    <string name="delete_test_data">Удалить справочники</string>
    <string name="data">Данные</string>
    <string name="server_address">Адрес сервера</string>
    <string name="organization_id">Идентификатор организации</string>
    <string name="organization_secret">Секрет организации</string>
    <string name="server_key">server_ip</string>
    <string name="do_not_disturb_mode">Режим не беспокоить</string>
    <string name="do_not_disturb_mode_desc">Не оповещать меня в эти часы</string>
    <string name="start_time">Начало</string>
    <string name="start_time_desc">23:00</string>
    <string name="end_time">Конец</string>
    <string name="end_time_desc">06:00</string>
    <string-array name="notification_interval">
        <item>неделя</item>
        <item>месяц</item>
        <item>2 месяца</item>
        <item>3 месяца</item>
    </string-array>
    <string name="other">Разное</string>
    <string name="user_interface">Интерфейс</string>
    <string name="navigation_bar_restart_msg">Изменения вступят в силу после перезапуска</string>
    <string-array name="notification_interval_item">
        <item>7</item>
        <item>30</item>
        <item>61</item>
        <item>92</item>
    </string-array>
    <string name="version">Версия</string>
    <string name="rate">Оценка</string>
    <string name="rate_desc">Если Вам нравится приложение - оцените его.</string>
    <string name="licenses">Лицензия</string>
    <string name="source_code">GitHub Source code</string>
    <string name="source_code_desc">https://github.com/Olejek88/AskMaster</string>
    <string name="support">Поддержка</string>
    <string name="send_advices">Связаться со мной</string>
    <string name="mail_account">mailto:shtrmvk@gmail.com</string>
    <string name="mail_topic">AskMaster</string>
    <string name="send_advices_desc">Помогите мне улучшить приложение.</string>
    <string name="web_site">Страница проекта в сети</string>
    <string name="web_site_link">http://askmaster.ru</string>
    <string name="set_end_time_error">Start time can not be same as end time.</string>
    <string name="notification_new_answer">\"The question has a new answer\"</string>
    <string name="shortcut_label_add_package">Add manually</string>
    <string name="shortcut_label_search">Search</string>
    <string name="shortcut_label_scan_code">Scan code</string>
    <string name="all_packages_are_delivered">All packages are delivered.</string>
    <string name="no_result">NO RESULT</string>
    <string name="search_hint">Package or company…</string>
    <string name="search_label_package">PACKAGE</string>
    <string name="search_label_company">COMPANY</string>
    <string name="item_loading">Loading…</string>
    <string name="error_no_browser">No browser installed on the device.</string>
    <string name="api_url">api_url</string>
    <string name="api_pref_title">Сервер</string>
    <string name="api_url_default">http://api.serviceman.tehnosber.ru</string>
    <string name="api_oid_default">0</string>
    <string name="api_oid_key">oid</string>
    <string name="api_organization_secret_default" />
    <string name="api_organization_secret_key">organization_secret</string>
    <string name="pleasePutTag">Поднесите метку</string>
    <string name="readTag">Считать</string>
    <string name="cancel">Отмена</string>
    <string name="image_description">изображение</string>
    <string name="pleaseScanImg">Наведите камеру на код</string>
    <string name="scan_process">Процесс сканирования</string>
    <string name="choose_tag">Выберите метку из меню</string>
    <string name="ok">ОК</string>
    <string name="default_rfid_driver_key">defaultRfidDriverKey</string>
    <string name="default_uhf_driver_key">defaultUHFDriverKey</string>
    <string name="default_ufc_driver">Драйвер UHF</string>
    <string name="default_rfid_driver">Драйвер считывателя</string>
    <string name="dont_ask_text_tags">Не спрашивать текстовые теги</string>
    <string name="enter_pin">Введите пин-код</string>
    <string name="defect_type">Тип дефекта</string>
</resources>