<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/preferences_about">

    <PreferenceCategory
        android:title="@string/nav_about">

        <Preference
            android:title="@string/version"
            app:key="version"
            android:summary="%s" />

        <Preference
            android:title="@string/rate"
            android:key="rate"
            android:summary="@string/rate_desc"/>

        <Preference
            android:title="@string/licenses"
            android:key="licenses"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/support">

        <Preference
            android:title="@string/send_advices"
            android:key="send_advices"
            android:summary="@string/send_advices_desc" />

    </PreferenceCategory>

</PreferenceScreen>