<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/preferences_settings">

    <PreferenceCategory
        android:title="@string/notifications">

        <CheckBoxPreference
            android:key="gps"
            android:title="@string/gps"
            android:defaultValue="true"
            android:summary="@string/gps_desc" />

        <Preference
            android:key="@string/load_test_data"
            android:title="@string/load_test_data" />

        <Preference
            android:key="@string/delete_test_data"
            android:title="@string/delete_test_data" />

        <ListPreference
            android:key="notification_interval"
            android:title="@string/notification_interval"
            android:summary="%s"
            android:entries="@array/notification_interval"
            android:entryValues="@array/notification_interval_item"
            android:defaultValue="1" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other">


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/user_interface">


    </PreferenceCategory>

</PreferenceScreen>