<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/login_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/service_app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/buildtools" />

    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/user_select"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#757575"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/user_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_label"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:spinnerMode="dropdown"
        android:textColor="@color/mdtp_accent_color_dark" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_select"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:height="35dp"
        android:background="@color/colorPrimary"
        android:minHeight="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/user_login"
        android:textColor="@color/mdtp_white"
        android:tint="@android:color/white" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@color/mdtp_red"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/login_error"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/mdtp_white"
        android:textSize="14sp"
        android:visibility="gone" />

</RelativeLayout>
