<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FAFAFA"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/rfid_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:text="@string/choose_tag"
        android:layout_marginTop="10dp"
        android:textColor="#457445"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/rfid_dialog_text_spinner_lables"
        android:layout_below="@+id/rfid_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded"
        android:gravity="start|center_vertical"
        android:spinnerMode="dropdown"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/mdtp_white"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/rfid_dialog_buttons_layout"
        android:layout_below="@+id/rfid_dialog_text_spinner_lables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

    <Button
        android:id="@+id/rfid_dialog_text_button_CANCEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="35dp"
        android:layout_weight="1"
        android:minHeight="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FAFAFA"
        android:text="@string/cancel" />

    <TextView
            android:id="@+id/rfid_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:textSize="18sp" />

    <Button
        android:id="@+id/rfid_dialog_text_button_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="35dp"
        android:layout_weight="1"
        android:minHeight="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FAFAFA"
        android:text="@string/ok" />

    </LinearLayout>

</RelativeLayout>
