<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinatorLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#333333">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_add_image"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary"
                android:gravity="top"
                android:src="@drawable/question"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="2dp" />

            <ImageView
                android:id="@+id/profile_add_user_icon"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/profile_add_image"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_person_black_24dp" />

            <EditText
                android:id="@+id/profile_add_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/profile_add_image"
                android:layout_gravity="start|center_vertical"
                android:layout_toEndOf="@+id/profile_add_user_icon"
                android:gravity="center_vertical"
                android:hint="@string/profile_name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/profile_add_user_icon2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/profile_add_user_icon"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_add_location_black_24dp" />

            <EditText
                android:id="@+id/profile_add_address"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/profile_add_user_icon"
                android:layout_gravity="start"
                android:layout_toEndOf="@+id/profile_add_user_icon2"
                android:gravity="center_vertical"
                android:hint="@string/profile_city"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:textColor="#111111"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/profile_add_user_icon3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/profile_add_user_icon2"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_sentiment_very_satisfied_black_24dp" />

            <EditText
                android:id="@+id/profile_add_website"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/profile_add_user_icon2"
                android:layout_gravity="start"
                android:layout_toEndOf="@+id/profile_add_user_icon3"
                android:gravity="center_vertical"
                android:hint="@string/official_website"
                android:inputType="textWebEditText"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/profile_add_user_icon4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/profile_add_user_icon3"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_thumb_up_alt_black_24dp" />

            <EditText
                android:id="@+id/profile_add_phone"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/profile_add_user_icon3"
                android:layout_gravity="start"
                android:layout_toEndOf="@+id/profile_add_user_icon4"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/profile_button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_add_user_icon4"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:height="35dp"
                android:background="@drawable/button"
                android:minHeight="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/profile_submit_button"
                android:textColor="#FAFAFA" />

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addPhoto"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_plus_white_36dp"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/profile_add_image"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
